# FileGrouper

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
features/: select-grouping-criteria.feature  select-origin.feature
features/steps/: select-grouping-criteria.py  select-origin.py
src/application/: GroupFilesUsecase.py
src/domain/: Grouper.py  console_ui.py  group_factory.py  group_type.py  size_grouper.py  ui.py
src/domain/tests/: test_size_grouper.py
