[project]
name = "file-grouper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pre-commit>=4.3.0", "pyfakefs>=5.10.0"]

[dependency-groups]
dev = ["behave>=1.3.3", "mypy>=1.18.2", "pytest>=8.4.2", "ruff>=0.14.1"]

[tool.mypy]
exclude = ["features/", "tests/"]

[tool.ruff]
exclude = ["features/"]
indent-width = 8
line-length = 200

[tool.pytest.ini_options]
pythonpath = ["."]
